# Vardan-Groceri

./: .replit  pyproject.toml  replit.md
groceri-master/: app.py  database.sqlite3  extensions.py  models.py  requirements.txt  routes.py
