[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aniso8601>=10.0.1",
    "blinker>=1.9.0",
    "click>=8.3.1",
    "flask>=3.1.2",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "greenlet>=3.3.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "six>=1.17.0",
    "sqlalchemy>=2.0.46",
    "werkzeug>=3.1.5",
]
